fixed logo vertical alignment in IE FIIORG-183

--- a/_static/src/assets/scss/objects/module/_header.scss
+++ b/_static/src/assets/scss/objects/module/_header.scss
@@ -51,7 +51,7 @@
 
 .header-logo > svg {
     width: 191px;
-    height: auto;
+    height: 33px;
 }
 
 .header-logo rect,
